@@ -1,14 +1,30 @@
 import numpy as np
+import os.path
 from numpy.testing import (
     assert_almost_equal,
     assert_equal,
     assert_,
     assert_allclose,
 )
+import refnx, scipy
 
-from refnx.reflect import SLD, Structure, Spline, Slab, LipidLeaflet
+# the analysis module contains the curvefitting engine
+from refnx.analysis import CurveFitter, Objective
+
+from refnx.reflect import (
+    SLD,
+    ReflectModel,
+    Structure,
+    Spline,
+    Slab,
+    LipidLeaflet,
+    make_lipid_leaflet_constraint,
+)
 from refnx.reflect.structure import _profile_slicer
 from refnx.analysis import Parameter, Interval
+
+# the ReflectDataset object will contain the data
+from refnx.dataset import ReflectDataset
 
 
 class TestLipidLeaflet:
@@ -97,3 +113,113 @@ class TestLipidLeaflet:
         s = repr(self.leaflet)
         q = eval(s)
         assert_equal(q.slabs(), self.leaflet.slabs())
+
+
+def test_lipid_leaflet_example():
+    pth = os.path.join(os.path.dirname(refnx.__file__), "analysis", "test")
+
+    data_d2o = ReflectDataset(os.path.join(pth, "c_PLP0016596.dat"))
+    data_d2o.name = "d2o"
+
+    si = SLD(2.07 + 0j)
+    sio2 = SLD(3.47 + 0j)
+
+    # the following represent the solvent contrasts used in the experiment
+    d2o = SLD(6.36 + 0j)
+
+    # We want the `real` attribute parameter to vary in the analysis, and we want to apply
+    # uniform bounds. The `setp` method of a Parameter is a way of changing many aspects of
+    # Parameter behaviour at once.
+    d2o.real.setp(vary=True, bounds=(6.1, 6.36))
+    d2o.real.name = "d2o SLD"
+
+    # Parameter for the area per molecule each DMPC molecule occupies at the surface. We
+    # use the same area per molecule for the inner and outer leaflets.
+    apm = Parameter(56, "area per molecule", vary=True, bounds=(52, 65))
+
+    # the sum of scattering lengths for the lipid head and tail in Angstrom.
+    b_heads = Parameter(6.01e-4, "b_heads")
+    b_tails = Parameter(-2.92e-4, "b_tails")
+
+    # the volume occupied by the head and tail groups in cubic Angstrom.
+    v_heads = Parameter(319, "v_heads")
+    v_tails = Parameter(782, "v_tails")
+
+    # the head and tail group thicknesses.
+    inner_head_thickness = Parameter(
+        9, "inner_head_thickness", vary=True, bounds=(4, 11)
+    )
+    outer_head_thickness = Parameter(
+        9, "outer_head_thickness", vary=True, bounds=(4, 11)
+    )
+    tail_thickness = Parameter(
+        14, "tail_thickness", vary=True, bounds=(10, 17)
+    )
+
+    # finally construct a `LipidLeaflet` object for the inner and outer leaflets.
+    # Note that here the inner and outer leaflets use the same area per molecule,
+    # same tail thickness, etc, but this is not necessary if the inner and outer
+    # leaflets are different.
+    inner_leaflet = LipidLeaflet(
+        apm,
+        b_heads,
+        v_heads,
+        inner_head_thickness,
+        b_tails,
+        v_tails,
+        tail_thickness,
+        3,
+        3,
+    )
+
+    # we reverse the monolayer for the outer leaflet because the tail groups face upwards
+    outer_leaflet = LipidLeaflet(
+        apm,
+        b_heads,
+        v_heads,
+        outer_head_thickness,
+        b_tails,
+        v_tails,
+        tail_thickness,
+        3,
+        0,
+        reverse_monolayer=True,
+    )
+
+    # Slab constructed from SLD object.
+    sio2_slab = sio2(15, 3)
+    sio2_slab.thick.setp(vary=True, bounds=(2, 30))
+    sio2_slab.thick.name = "sio2 thickness"
+    sio2_slab.rough.setp(vary=True, bounds=(0, 7))
+    sio2_slab.rough.name = name = "sio2 roughness"
+    sio2_slab.vfsolv.setp(0.1, vary=True, bounds=(0.0, 0.5))
+    sio2_slab.vfsolv.name = "sio2 solvation"
+
+    solv_roughness = Parameter(3, "bilayer/solvent roughness")
+    solv_roughness.setp(vary=True, bounds=(0, 5))
+
+    s_d2o = (
+        si | sio2_slab | inner_leaflet | outer_leaflet | d2o(0, solv_roughness)
+    )
+
+    model_d2o = ReflectModel(s_d2o)
+
+    model_d2o.scale.setp(vary=True, bounds=(0.9, 1.1))
+    model_d2o.bkg.setp(vary=True, bounds=(-1e-6, 1e-6))
+    objective_d2o = Objective(model_d2o, data_d2o)
+
+    con_inner = make_lipid_leaflet_constraint(inner_leaflet, objective_d2o)
+    con_outer = make_lipid_leaflet_constraint(outer_leaflet, objective_d2o)
+
+    fitter = CurveFitter(objective_d2o)
+
+    fitter.fit(
+        "differential_evolution",
+        constraints=(con_inner, con_outer),
+        polish=False,
+        popsize=10,
+    )
+    assert inner_leaflet.volfrac_h <= 1
+    assert outer_leaflet.volfrac_h <= 1
+    assert inner_leaflet.volfrac_t <= 1
+    assert outer_leaflet.volfrac_h <= 1
